# claude-compress

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
claude_compress/: compressor.py  handoff.py  hook.py  installer.py  main.py  store.py
tests/: test_compressor.py  test_handoff.py  test_hook.py  test_installer.py
