[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-compress"
version = "0.1.9"
description = "Context compression for Claude Code — reduces tokens via PreToolUse hooks"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Prabhay", email = "coolprabhay90@gmail.com" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["claude", "anthropic", "context", "compression", "tokens", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/prabhay759/claude-compress"
Repository = "https://github.com/prabhay759/claude-compress"
Issues = "https://github.com/prabhay759/claude-compress/issues"

[project.scripts]
claude-compress = "claude_compress.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_compress*"]
